src/objects/Campaign_Project_Segment_Summary__c.object
<CustomObject>
    <description>Campaign Project Segmentation Summary</description>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <description>Campaign Project</description>
        <inlineHelpText>Campaign Project</inlineHelpText>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Segmentation Summary</relationshipLabel>
        <relationshipName>Campaign_Project_Segment_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Control_Percentage__c</fullName>
        <description>Control Percentage</description>
        <inlineHelpText>Control Percentage</inlineHelpText>
        <label>Control Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Segmentation Description</description>
        <inlineHelpText>Segmentation Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <label>A/B Testing</label>
        <picklist>
            <picklistValues>
                <fullName>50/50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60/40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70/30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90/10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Campaign Project Segment Summary</label>
    <nameField>
        <displayFormat>CPS-{0000000000}</displayFormat>
        <label>Campaign Project Segment Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Segment Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>